--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  /* solution code here */
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +19,11 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  /* solution code here */
+  display: flex;
+  margin: 0;
+  padding: 0;;
+  gap: 5px;
 }
 
 a {
