--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,7 +12,22 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  /* solution */
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+/* formatting the left and right class */
+
+.left,
+.right {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +60,9 @@ a {
 
 ul {
   list-style-type: none;
+  /* solution */
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
 }
