--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
 }
 
 img {
@@ -10,7 +11,30 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  /* center the title */
+  text-align: center;
+  margin: 0 0 32px 0;
 }
+
+/* solution */
+
+.container {
+  display: flex;
+  gap: 52px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
+
+.text {
+  text-align: center;
+}
+
+
 
 /* do not edit this footer */
 .footer {
