--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -4,6 +4,10 @@ html, body {
   height: 100%;
 }
 
+ * {
+  border: 2px solid red;
+ }
+
 body {
   font-family: Roboto, sans-serif;
   margin: 0;
@@ -20,11 +24,15 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 10px;
+  gap: 10px;
 }
 
 .icon {
   color: royalblue;
   font-size: 26px;
+  font-weight: bold;
   font-weight: 700;
   background: lavender;
   width: 42px;
@@ -33,6 +41,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -66,4 +75,17 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.center {
+  
 }
