--- a/foundations/flex/06-flex-layout/solution/solution.css
+++ b/foundations/flex/06-flex-layout/solution/solution.css
@@ -34,6 +34,7 @@ body {
 
 button {
   padding: 8px 16px;
+
 }
 
 .content {
@@ -58,7 +59,7 @@ a {
 }
 
 .footer {
-  background: #eee;
+  background: #eeeeee;
 }
 
 ul {
